--- a/1 lab/styles/base.css
+++ b/1 lab/styles/base.css
@@ -1,14 +1,17 @@
 body {
+    display: flex;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f9f9f9;
+    flex-direction: column;
 }
 
 main{
-display: flex;
-justify-content: center;
-flex-direction: column;
-align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header {
@@ -16,7 +19,9 @@ align-items: center;
     justify-content: space-between;
     align-items: center;
     padding: 10px ;
-    background-color: #fff;
+    background-color: #f9f9f9;
+    width: 70%;
+    align-self: center;
 }
 .header .header-logo-link {
     display: flex ;
@@ -24,7 +29,6 @@ align-items: center;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #fff;
 }
 
 .header .header-logo-link div{
@@ -55,6 +59,8 @@ align-items: center;
 nav {
     display: flex;
     justify-content: end;
+    width: 70%;
+    align-self: center;
 }
 
 nav ul {
