--- a/1 lab/styles/index.css
+++ b/1 lab/styles/index.css
@@ -1,5 +1,5 @@
 .intensive{
-    background: url('../assets/images/houses.webp') no-repeat center center;
+    background: url('../assets/images/index1.jpg') no-repeat center center;
     background-size: cover;
 }
 
@@ -19,26 +19,6 @@
   color: white;
 }
 
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: start;
-    padding: 50px 5%;
-}
-
-.info {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-}
-
-.about-school h2, .history h2 {
-    color: #333;
-}
-
 .cta button {
     background-color: red;
     color: white;
@@ -51,42 +31,81 @@
     background-color: darkred;
 }
 
-.team {
+.study,
+.our-projects {
     text-align: center;
     margin-top: 5px;
     background-size: cover;
     padding: 50px 0;
 }
 
-.team-title {
+.study-title,
+.projects-title {
     text-align: center;
     font-size: 2em;
     margin-bottom: 20px;
 }
 
-.team-members {
+.study-forms,
+.projects {
   display: flex;
   justify-content: center;
   gap: 20px;
 }
 
-.team-member {
+.study-form,
+.project {
   text-align: center;
-  width: 300px; 
+  width: 300px;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column; 
+  justify-content: space-between; 
 }
 
-.team-member img {
-  width: 300px; 
-  height: 300px; 
+.study-form img ,
+.project img{
+  width: 100%;
+  height: 200px;
   object-fit: cover;
+  border-radius: 8px;
 }
 
-.team-member h3 {
+.study-form h3 {
+  margin-top: 15px;
+  font-size: 1.6em;
+  color: #333;
+}
+
+.study-form p {
   margin-top: 10px;
-  font-size: 1.4em; 
+  color: #666;
+  font-size: 1em;
 }
 
-.team-member p {
-  margin-top: 5px;
-  color: black;
+.price {
+  font-size: 1.2em;
+  color: red;
+  margin-top: 10px;
+}
+
+.more-info-btn {
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 20px;
+  background-color: red;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+.more-info-btn:hover {
+  background-color: darkred;
+}
+
+.study-form .more-info-btn {
+  text-align: center;
 }
