--- a/1 lab/styles/courses.css
+++ b/1 lab/styles/courses.css
@@ -1,3 +1,9 @@
+main{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 .intensive{
     background: url('../assets/images/mountains.png') no-repeat center center;
     background-size: cover;
