--- a/1 lab/styles/base.css
+++ b/1 lab/styles/base.css
@@ -23,6 +23,11 @@ main{
     width: 70%;
     align-self: center;
 }
+
+.header a {
+    text-decoration: none;
+}
+
 .header .header-logo-link {
     display: flex ;
     flex-direction: row;
@@ -143,3 +148,10 @@ footer {
     padding-top: 10px;
     margin-top: 10px;
 }
+
+
+.rectangle{
+    width: 100%;
+    height: 1px;
+    background:black;
+  }
