--- a/1 lab/styles/base.css
+++ b/1 lab/styles/base.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 768px) {
   .topnav {
-    background-color: #333;
+    background-color: grey;
     position: relative;
   }
 
@@ -20,20 +20,12 @@
 
   /* Style the hamburger menu */
   .topnav a.icon {
-    background: url('../assets/images/burger.svg');
     color: white;
-    display: block;
     position: absolute;
     right: 0;
     top: 0;
   }
-
-  /* Add a grey background color on mouse-over */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  } 
-
+  
   /* Style the active link (or home/logo) */
   .active {
     background-color: red;
@@ -68,6 +60,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    width: fit-content;
   }
 
   header .header-logo-link div {
@@ -88,7 +81,7 @@
     height: 50px;
   }
   header .contact-info {
-    visibility: collapse;
+    display: none;
   }
 
   .logo {
