adapt courses and contacts

--- a/1 lab/styles/contacts.css
+++ b/1 lab/styles/contacts.css
@@ -1,32 +1,58 @@
-.contacts-label{
-    display: flex;
-    flex-direction: column;
-    background: url('../assets/images/contact-label.png') no-repeat center center;
-    background-size: cover;
-    padding: 30px 100px;
-    
+
+
+@media screen and (max-width: 900px) {
+    .main-content h1 {
+        font-size: 24px;
+      }
+
+      .contacts-label {
+        display: flex;
+        flex-direction: column;
+        background: url("../assets/images/contact-label.png") no-repeat center center;
+        background-size: cover;
+        padding: 5%;
+      }
+      
+      .number-label {
+        display: flex;
+        flex-direction: column;
+        background: #2b2122;
+        background-size: cover;
+        padding: 5% ;
+      }
+
 }
 
-.number-label{
-    display: flex;
-    flex-direction: column;
-    background: #2B2122;
-    background-size: cover;
-    padding: 20px 100px;
-    
-}
+@media screen and (min-width: 900px) {
 
-.contacts-label .subheadline{
-    max-width: 50%;   
+    .contacts-label {
+        display: flex;
+        flex-direction: column;
+        background: url("../assets/images/contact-label.png") no-repeat center center;
+        background-size: cover;
+        padding: 30px 100px;
+      }
+      
+      .number-label {
+        display: flex;
+        flex-direction: column;
+        background: #2b2122;
+        background-size: cover;
+        padding: 20px 100px;
+      }
+  .contacts-label .subheadline {
+    max-width: 50%;
     align-self: center;
-    
-}
-.main-content h1 {
+  }
+  .main-content h1 {
     font-size: 36px;
+  }
+
 }
-#rectangle{
-    width:200px;
-    height:3px;
-    background:white;
-    align-self: center;
+
+#rectangle {
+  width: 200px;
+  height: 3px;
+  background: white;
+  align-self: center;
 }
