--- a/1 lab/styles/news.css
+++ b/1 lab/styles/news.css
@@ -1,15 +1,53 @@
-.news-banner{
-    background: url('../assets/images/index.jpg') no-repeat center center;
-    background-size: cover;
-    padding: 40px 100px;
+
+
+@media screen and (max-width: 900px) {
+
+    .news-banner{
+        background: url('../assets/images/index.jpg') no-repeat center center;
+        background-size: cover;
+        padding: 5%;
+    }
+    .container {
+        display: flex;
+        flex-direction: column;
+        margin: 5%;
+    }
+
+    .image {
+        width: 90%;
+        height: auto;
+        border-radius: 10px;
+        margin: 20px ;
+    }
 }
-.container {
-    display: flex;
-    width: 60%;
-    padding: 20px;
-    flex-direction: column;
-    max-width: 1000px;
+
+
+
+@media screen and (min-width: 900px) {
+    .news-banner{
+        background: url('../assets/images/index.jpg') no-repeat center center;
+        background-size: cover;
+        padding: 40px 100px;
+    }
+
+    .container {
+        display: flex;
+        width: 60%;
+        padding: 20px;
+        flex-direction: column;
+        max-width: 60%;
+    }
+
+    .image {
+        width: 30%;
+        height: auto;
+        border-radius: 10px;
+        margin: 20px ;
+        float: left;
+    }
 }
+
+
 .news-header {
     font-size: 32px;
     color: #333;
@@ -22,23 +60,17 @@
 .news-text {
     font-size: 22px;
     color: #333;
-    margin: 16px 0;
+    margin: 16px 20px;
 }
 
 .news-button {
     
     margin-top: 20px;
+    margin-left: 20px;
     padding: 10px 20px;
     background-color: red;
     color: #fff;
     text-decoration: none;
     font-size: 18px;
-    align-self: end;
+    align-self: start;
 } 
-.image {
-    width: 30%;
-    height: auto;
-    border-radius: 10px;
-    margin: 20px ;
-    float: left;
-}
