--- a/1 lab/styles/about.css
+++ b/1 lab/styles/about.css
@@ -22,6 +22,7 @@
 .container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: start;
     padding: 50px 5%;
@@ -30,6 +31,7 @@
 .info {
     flex: 1;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: start;
     align-items: center;
@@ -70,6 +72,7 @@
 
 .team-members {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
 }
@@ -81,7 +84,8 @@
 
 .team-member img {
   width: 300px; 
-  height: 300px; 
+  max-width: fit-content;
+  height: auto;
   object-fit: cover;
 }
 
