--- a/1 lab/styles/privacy.css
+++ b/1 lab/styles/privacy.css
@@ -3,19 +3,20 @@
 }
 
 .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: start;
-    padding: 20px 5%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 15px 1%;
+  margin: 5%;
 }
 
 .info {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
 }
 
 .info p{
@@ -26,19 +27,8 @@
     align-self: flex-start;
   }
 
-.about-school h2, .history h2 {
-    color: #333;
-}
-
-.cta button {
-    background-color: red;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-}
-
-.cta button:hover {
-    background-color: darkred;
-}
-
+  @media screen and (max-width: 500px) {
+    .info{
+     font-size: x-small;
+    } 
+   }
