--- a/1 lab/styles/index.css
+++ b/1 lab/styles/index.css
@@ -1,18 +1,11 @@
-.intensive{
-    background: url('../assets/images/index1.jpg') no-repeat center center;
-    background-size: cover;
-}
-
-.group{
-    background: url('../assets/images/group.png') no-repeat center center;
-    background-size: cover;
-}
-
-.banner {
-  background: url('../assets/images/mountains.png') no-repeat center center;
+.intensive {
+  background: url("../assets/images/index1.jpg") no-repeat center center;
   background-size: cover;
-  text-align: center;
-  padding: 50px 0;
+}
+
+.group {
+  background: url("../assets/images/group.png") no-repeat center center;
+  background-size: cover;
 }
 
 .banner h1 {
@@ -20,39 +13,31 @@
 }
 
 .cta button {
-    background-color: red;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
 }
 
 .cta button:hover {
-    background-color: darkred;
+  background-color: darkred;
 }
 
 .study,
 .our-projects {
-    text-align: center;
-    margin-top: 5px;
-    background-size: cover;
-    padding: 50px 0;
+  text-align: center;
+  margin-top: 5px;
+  background-size: cover;
+  padding: 50px 0;
 }
 
 .study-title,
 .projects-title {
-    text-align: center;
-    font-size: 2em;
-    margin-bottom: 20px;
-    margin:3%;
-}
-
-.study-forms,
-.projects {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 20px;
+  margin: 3%;
 }
 
 @media screen and (max-width: 325px) {
@@ -64,24 +49,6 @@
     gap: 20px;
     margin: 5%;
   }
-}
-
-@media screen and (min-width: 325px) {
-.study-form,
-.project {
-  text-align: center;
-  width: 300px;
-  background: white;
-  padding: 5px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column; 
-  justify-content: space-between; 
-}
-}
-
-@media screen and (max-width: 325px) {
   .study-form,
   .project {
     text-align: center;
@@ -90,13 +57,36 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: column; 
-    justify-content: space-between; 
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 
-.study-form img ,
-.project img{
+@media screen and (min-width: 325px) {
+  .study-forms,
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .study-form,
+  .project {
+    text-align: center;
+    width: 300px;
+    background: white;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+.study-form img,
+.project img {
   width: 100%;
   height: 200px;
   object-fit: cover;
