--- a/1 lab/styles/news.css
+++ b/1 lab/styles/news.css
@@ -1,76 +1,82 @@
+@media screen and (max-width: 1000px) {
+  .news-banner {
+    background: url("../assets/images/index.jpg") no-repeat center center;
+    background-size: cover;
+    padding: 5%;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+    width: 90%;
+  }
 
+  .image {
+    width: 90%;
+    border-radius: 10px;
+    margin-top: 20px;
+    align-self: center;
+  }
 
-@media screen and (max-width: 900px) {
-
-    .news-banner{
-        background: url('../assets/images/index.jpg') no-repeat center center;
-        background-size: cover;
-        padding: 5%;
-    }
-    .container {
-        display: flex;
-        flex-direction: column;
-        margin: 5%;
-    }
-
-    .image {
-        width: 90%;
-        height: auto;
-        border-radius: 10px;
-        margin: 20px ;
-    }
-}
-
-
-
-@media screen and (min-width: 900px) {
-    .news-banner{
-        background: url('../assets/images/index.jpg') no-repeat center center;
-        background-size: cover;
-        padding: 40px 100px;
-    }
-
-    .container {
-        display: flex;
-        width: 60%;
-        padding: 20px;
-        flex-direction: column;
-        max-width: 60%;
-    }
-
-    .image {
-        width: 30%;
-        height: auto;
-        border-radius: 10px;
-        margin: 20px ;
-        float: left;
-    }
-}
-
-
-.news-header {
+  .news-header {
+    width: 90%;
     font-size: 32px;
     color: #333;
     margin-bottom: 10px;
-}
-.news-subheader {
-    color: red;
-    font-size: 24px;
-}
-.news-text {
+  }
+
+  .news-text {
     font-size: 22px;
     color: #333;
-    margin: 16px 20px;
+    width: 90%;
+
+  }
 }
 
+@media screen and (min-width: 1000px) {
+  .news-banner {
+    background: url("../assets/images/index.jpg") no-repeat center center;
+    background-size: cover;
+    padding: 40px 100px;
+  }
+
+  .container {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    max-width: 80%;
+  }
+
+  .image {
+    width: 60%;
+    height: auto;
+    border-radius: 10px;
+    float: left;
+    max-width: 700px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+  }
+
+  .news-header {
+    font-size: 32px;
+    color: #333;
+  }
+
+  .news-text {
+    font-size: 22px;
+    color: #333;
+    margin: 0 20px;
+  }
+}
+
+
+
 .news-button {
-    
-    margin-top: 20px;
-    margin-left: 20px;
-    padding: 10px 20px;
-    background-color: red;
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    align-self: start;
-} 
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: red;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  align-self: start;
+}
