--- a/1 lab/styles/courses.css
+++ b/1 lab/styles/courses.css
@@ -1,82 +1,76 @@
-
-.intensive{
-    background: url('../assets/images/mountains.png') no-repeat center center;
-    background-size: cover;
+.intensive {
+  background: url("../assets/images/mountains.png") no-repeat center center;
+  background-size: cover;
 }
 
-.group{
-    background: url('../assets/images/group.png') no-repeat center center;
-    background-size: cover;
+.group {
+  background: url("../assets/images/group.png") no-repeat center center;
+  background-size: cover;
 }
 
 .main-content .signup-button {
-    background-color: red;
-    color: white;
-    padding: 10px 20px;
-    text-decoration: none;
-    font-size: 18px;
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 18px;
 }
 
-
-
 @media screen and (max-width: 900px) {
-    .content {
-        max-width: 90%;
-        margin: 10px
-    }
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 20px;
-        flex-direction: column;
-    } 
+  .content {
+    max-width: 90%;
+    margin: 10px;
+  }
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+    flex-direction: column;
+  }
 
-    .sidebar {
-        background-color: white;
-        padding: 20px;
-        max-width: 600px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        text-align: start;
-        max-height: 80%;
-    }
+  .sidebar {
+    background-color: white;
+    padding: 20px;
+    max-width: 600px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: start;
+    max-height: 80%;
+  }
 }
 
 @media screen and (min-width: 900px) {
-    .content {
-        max-width:100%;
-        margin: 10px
-    }
+  .content {
+    max-width: 100%;
+    margin: 10px;
+  }
 
-    .container {
-        display: flex;
-        justify-content: center;
-        padding: 50px 5%;
-    } 
-    .sidebar {
-        background-color: white;
-        padding: 20px;
-        max-width: 600px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        text-align: start;
-        max-width: 40%;
-        max-height: fit-content
-    }
-
+  .container {
+    display: flex;
+    justify-content: center;
+    padding: 50px 5%;
+  }
+  .sidebar {
+    background-color: white;
+    padding: 20px;
+    max-width: 600px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: start;
+    max-width: 40%;
+    max-height: fit-content;
+  }
 }
-
-
 
 .button {
-    background-color: red;
-    color: white;
-    padding: 10px 20px;
-    text-decoration: none;
-    display: inline-block;
-    margin-top: 20px;
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 20px;
 }
 .highlight {
-    color: red;
+  color: red;
 }
