--- a/1 lab/styles/news.css
+++ b/1 lab/styles/news.css
@@ -1,7 +1,6 @@
 @media screen and (max-width: 1000px) {
   .news-banner {
-    background: url("../assets/images/index.jpg") no-repeat center center;
-    background-size: cover;
+    background: url("../assets/images/index.jpg") center center/cover no-repeat;
     padding: 5%;
   }
   .container {
@@ -10,42 +9,35 @@
     padding: 5%;
     width: 90%;
   }
-
   .image {
     width: 90%;
     border-radius: 10px;
     margin-top: 20px;
     align-self: center;
   }
-
   .news-header {
     width: 90%;
     font-size: 32px;
     color: #333;
     margin-bottom: 10px;
   }
-
   .news-text {
     font-size: 22px;
     color: #333;
     width: 90%;
   }
 }
-
 @media screen and (min-width: 1000px) {
   .news-banner {
-    background: url("../assets/images/index.jpg") no-repeat center center;
-    background-size: cover;
+    background: url("../assets/images/index.jpg") center center/cover no-repeat;
     padding: 40px 100px;
   }
-
   .container {
     display: flex;
     padding: 20px;
     flex-direction: column;
     max-width: 80%;
   }
-
   .image {
     width: 60%;
     height: auto;
@@ -55,19 +47,16 @@
     margin-bottom: 10px;
     margin-right: 20px;
   }
-
   .news-header {
     font-size: 32px;
     color: #333;
   }
-
   .news-text {
     font-size: 22px;
     color: #333;
     margin: 0 20px;
   }
 }
-
 .news-button {
   margin-top: 20px;
   padding: 10px 20px;
