--- a/1 lab/styles/about.css
+++ b/1 lab/styles/about.css
@@ -1,89 +1,75 @@
-.intensive{
-    background: url('../assets/images/houses.webp') no-repeat center center;
-    background-size: cover;
-}
-
-.group{
-    background: url('../assets/images/group.png') no-repeat center center;
-    background-size: cover;
-}
-
-.banner {
-  background: url('../assets/images/mountains.png') no-repeat center center;
-  background-size: cover;
+.banner,
+.team-member,
+.team-title {
   text-align: center;
+}
+.intensive {
+  background: url("../assets/images/houses.webp") center center/cover no-repeat;
+}
+.group {
+  background: url("../assets/images/group.png") center center/cover no-repeat;
+}
+.banner {
+  background: url("../assets/images/mountains.png") center center/cover
+    no-repeat;
   padding: 50px 0;
 }
-
 .banner h1 {
-  color: white;
+  color: #fff;
 }
-
 .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: start;
-    padding: 50px 5%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: start;
+  padding: 50px 5%;
 }
-
 .info {
-    flex:1;
-    max-width: 40%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    margin:5%;
+  flex: 1;
+  max-width: 40%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  margin: 5%;
 }
-
-.info p{
+.info p {
   align-self: flex-start;
 }
-
 .team {
-    background-size: cover;
-    padding: 20px 5%;
+  background-size: cover;
+  padding: 20px 5%;
 }
-
 .team-title {
-    text-align: center;
-    font-size: 2em;
-    margin-bottom: 20px;
+  font-size: 2em;
+  margin-bottom: 20px;
 }
-
 .team-members {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: start;
 }
-
 .team-member {
-  text-align: center;
-  margin: 10px 10px;
-  width: 300px; 
+  margin: 10px;
+  width: 300px;
 }
-
 .team-member img {
-  width: 300px; 
+  width: 300px;
   max-width: fit-content;
   height: auto;
   object-fit: cover;
 }
-
 .team-member h3 {
   margin-top: 10px;
-  font-size: 1.4em; 
+  font-size: 1.4em;
 }
-
 .team-member p {
   margin-top: 5px;
-  color: black;
+  color: #000;
 }
-
 @media screen and (max-width: 769px) {
   .container {
     display: flex;
@@ -92,7 +78,7 @@
     justify-content: start;
     align-items: center;
     padding: 20px 5%;
-}
+  }
   .info {
     margin: 0;
     max-width: 90%;
@@ -103,8 +89,6 @@
     align-items: center;
   }
 }
-
-
 @media screen and (max-width: 711px) {
   .team {
     background-size: cover;
@@ -119,11 +103,11 @@
   }
   .team-member {
     text-align: center;
-    margin: 10px 10px;
-    width: 100%; 
+    margin: 10px;
+    width: 100%;
   }
   .team-member img {
-    width: 80%; 
+    width: 80%;
     max-width: fit-content;
     height: auto;
     object-fit: cover;
