--- a/1 lab/styles/index.css
+++ b/1 lab/styles/index.css
@@ -1,59 +1,50 @@
 .intensive {
-  background: url("../assets/images/index1.jpg") no-repeat center center;
-  background-size: cover;
+  background: url("../assets/images/index1.jpg") center center/cover no-repeat;
 }
-
 .group {
-  background: url("../assets/images/group.png") no-repeat center center;
-  background-size: cover;
+  background: url("../assets/images/group.png") center center/cover no-repeat;
 }
-
 .banner h1 {
-  color: white;
+  color: #fff;
 }
-
 .cta button {
   background-color: red;
-  color: white;
+  color: #fff;
   border: none;
   padding: 10px 20px;
   cursor: pointer;
 }
-
-.cta button:hover {
-  background-color: darkred;
+.cta button:hover,
+.more-info-btn:hover {
+  background-color: #8b0000;
 }
-
-.study,
-.our-projects {
+.our-projects,
+.study {
   text-align: center;
   margin-top: 5px;
   background-size: cover;
   padding: 50px 0;
 }
-
-.study-title,
-.projects-title {
+.projects-title,
+.study-title {
   text-align: center;
   font-size: 2em;
-  margin-bottom: 20px;
   margin: 3%;
 }
-
 @media screen and (max-width: 325px) {
-  .study-forms,
-  .projects {
+  .projects,
+  .study-forms {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     margin: 5%;
   }
-  .study-form,
-  .project {
+  .project,
+  .study-form {
     text-align: center;
     width: 300px;
-    background: white;
+    background: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -61,21 +52,19 @@
     justify-content: space-between;
   }
 }
-
 @media screen and (min-width: 325px) {
-  .study-forms,
-  .projects {
+  .projects,
+  .study-forms {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
   }
-
-  .study-form,
-  .project {
+  .project,
+  .study-form {
     text-align: center;
     width: 300px;
-    background: white;
+    background: #fff;
     padding: 5px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -84,47 +73,38 @@
     justify-content: space-between;
   }
 }
-
-.study-form img,
-.project img {
+.project img,
+.study-form img {
   width: 100%;
   height: 200px;
   object-fit: cover;
   border-radius: 8px;
 }
-
 .study-form h3 {
   margin-top: 15px;
   font-size: 1.6em;
   color: #333;
 }
-
 .study-form p {
   margin-top: 10px;
   color: #666;
   font-size: 1em;
 }
-
 .price {
   font-size: 1.2em;
   color: red;
   margin-top: 10px;
 }
-
 .more-info-btn {
   display: inline-block;
   margin-top: 15px;
   padding: 10px 20px;
   background-color: red;
-  color: white;
+  color: #fff;
   text-decoration: none;
   border-radius: 5px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s;
 }
-.more-info-btn:hover {
-  background-color: darkred;
-}
-
 .study-form .more-info-btn {
   text-align: center;
 }
