--- a/1 lab/styles/privacy.css
+++ b/1 lab/styles/privacy.css
@@ -1,38 +1,34 @@
 .banner h1 {
   color: white;
 }
-
 .container {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 15px 1%;
-  margin: 5%;
+  padding: 5px 1%;
+  margin: 1%;
 }
-
 .info {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  padding: 3%;
 }
-
-.info p {
+.info h1{
+  text-align: center;
+}
+.info p, .info h3{
   align-self: flex-start;
 }
-
-.info h3 {
-  align-self: flex-start;
-}
-
-@media screen and (max-width: 500px) {
-  .info {
-    font-size: x-small;
+@media screen and (max-width: 428px) {
+  .info h1{
+    font-size: medium;
+    text-align: center;
   }
 }
-
 @media screen and (max-width: 768px) {
   .rectangle {
     display: none;
