--- a/1 lab/styles/news.css
+++ b/1 lab/styles/news.css
@@ -36,10 +36,11 @@
     display: flex;
     padding: 20px;
     flex-direction: column;
-    max-width: 80%;
+    max-width: 60%;
   }
   .image {
-    width: 60%;
+    max-width: 50vh;
+    max-height: 30vh;
     height: auto;
     border-radius: 10px;
     float: left;
