--- a/1 lab/styles/about.css
+++ b/1 lab/styles/about.css
@@ -10,8 +10,7 @@
   background: url("../assets/images/group.png") center center/cover no-repeat;
 }
 .banner {
-  background: url("../assets/images/mountains.png") center center/cover
-    no-repeat;
+  background: url("../assets/images/mountains.png") center center/cover no-repeat;
   padding: 50px 0;
 }
 .banner h1 {
@@ -23,7 +22,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: start;
-  padding: 50px 5%;
+  padding: 10px 5%;
 }
 .info {
   flex: 1;
@@ -33,35 +32,82 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  margin: 5%;
+  margin: 2% 5% 0%;
 }
 .info p {
   align-self: flex-start;
 }
 .team {
   background-size: cover;
-  padding: 20px 5%;
+  padding: 2px 5%;
 }
 .team-title {
   font-size: 2em;
   margin-bottom: 20px;
 }
-.team-members {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: start;
-}
+
 .team-member {
+  position: relative;
+  text-align: center;
+  width: 400px;
   margin: 10px;
-  width: 300px;
+  padding: 20px;
 }
-.team-member img {
-  width: 300px;
-  max-width: fit-content;
+
+/**/
+.carousel-container {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.carousel-slides {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-slide {
+  min-width: 100%;
+}
+
+.carousel-slide img {
+  width: 100%;
   height: auto;
+  border-radius: 10px;
   object-fit: cover;
 }
+
+/* Кнопки переключения */
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.prev { left: 10px; }
+.next { right: 10px; }
+
+
+/**/
+
 .team-member h3 {
   margin-top: 10px;
   font-size: 1.4em;
@@ -95,21 +141,13 @@
     padding: 10px 5%;
     width: 90%;
   }
-  .team-members {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-  }
+
   .team-member {
     text-align: center;
     margin: 10px;
     width: 100%;
-  }
-  .team-member img {
-    width: 80%;
-    max-width: fit-content;
-    height: auto;
-    object-fit: cover;
+    position: relative;
+    z-index: 1;
   }
 }
+
